# Object-detection

./: CMakeLists.txt  README.md
src/opencvworker/: opencvworker.cpp  opencvworker.h
src/ui/: widget.cpp  widget.h  widget.ui
